--- a/styles/styles.css
+++ b/styles/styles.css
@@ -286,6 +286,12 @@ float:right;
 
 }
 
+#footer{
+	position:absolute;
+	display:block;
+	top:100%;
+}
+
 #footer-bllinks a[href], #footer-brlinks a[href]{
 	display:block;
 	width:100%;
@@ -315,6 +321,11 @@ float:right;
 
 }
 
+@media screen and (max-height:480px) {
+#footer{
+	display:none;
+}
+}
 /*
 #tr-links{
 	
